fix: remove overflow

--- a/style.css
+++ b/style.css
@@ -542,7 +542,8 @@ img {
     
     overflow: auto;
     
-    height: 120lvh;
+    max-height: 100svh;
+    max-width: 100svh;
   }
 
   .boxContent {
@@ -560,13 +561,13 @@ img {
   .oliviaContainer {
     position: absolute;
     top: -20px;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     justify-content: center;
-    margin: 0 5rem;
+    margin: 0rem 5rem;
   }
 
   .oliviaContent {
-    gap: 3rem;
+    gap: 1rem;
   }
 
   .socials-container {
@@ -575,7 +576,7 @@ img {
     justify-content: center;
     margin: 0 1rem;
     align-items: center;
-    bottom: -30px;
+    bottom: -60px;
     zoom: 70%;
   }
 
